new agenda with  hyperlinks

--- a/workshops/June-2024-SpaDES-workshop.qmd
+++ b/workshops/June-2024-SpaDES-workshop.qmd
@@ -36,92 +36,144 @@ to ask questions and discuss as a group.
 
 All times in Pacific Daylight Time (GMT-7)
 
-+----------------------------------+----------------------------------+
-| **DAY 1**                        | **SpaDES foundations**           |
-+----------------------------------+----------------------------------+
-| 8:30 - 9:20                      | Introduction                     |
-+----------------------------------+----------------------------------+
-|                                  | Workshop logistics               |
-+----------------------------------+----------------------------------+
-|                                  | What is SpaDES and why use it?   |
-+----------------------------------+----------------------------------+
-| 9:30 - 10:00                     | Introduction to SpaDES modules   |
-+----------------------------------+----------------------------------+
-| 10:00 - 11:00                    | WOYO                             |
-+----------------------------------+----------------------------------+
-| 11:00 - 11:30                    | Module files and metadata        |
-+----------------------------------+----------------------------------+
-|                                  | Module inputs                    |
-+----------------------------------+----------------------------------+
-| 11:30 - 12:30                    | WOYO                             |
-+----------------------------------+----------------------------------+
-| 12:30 - 1:30                     | LUNCH BREAK                      |
-+----------------------------------+----------------------------------+
-| 1:30 - 2:00                      | The `simList`                    |
-+----------------------------------+----------------------------------+
-| 2:00 - 3:00                      | WOYO                             |
-+----------------------------------+----------------------------------+
-| 3:00 - 3:30                      | Modules & events                 |
-+----------------------------------+----------------------------------+
-|                                  | Event scheduling                 |
-+----------------------------------+----------------------------------+
-| 3:30 - free ending\              | WOYO                             |
-| or\                              |                                  |
-| next morning for earlier time    |                                  |
-| zones                            |                                  |
-+----------------------------------+----------------------------------+
-| **DAY 2**                        | **Continuous workflows with      |
-|                                  | simple examples**                |
-+----------------------------------+----------------------------------+
-| 8:30 - 9:00                      | Revisit previous WOYO and Day 1  |
-+----------------------------------+----------------------------------+
-| 9:00 - 9:30                      | Continuous workflows             |
-|                                  |                                  |
-|                                  | Caching                          |
-+----------------------------------+----------------------------------+
-| 9:30 - 10:30                     | WOYO                             |
-+----------------------------------+----------------------------------+
-| 10:30 - 11:00                    | `prepInputs()`                   |
-+----------------------------------+----------------------------------+
-| 11:00 - 12:00                    | WOYO                             |
-+----------------------------------+----------------------------------+
-| 12:00 - 1:00                     | LUNCH BREAK                      |
-+----------------------------------+----------------------------------+
-| 1:00 - 1:30                      | SpaDES workflows and projects    |
-|                                  | with `setupProject`              |
-+----------------------------------+----------------------------------+
-| 1:30 - 2:30                      | WOYO                             |
-+----------------------------------+----------------------------------+
-| 2:30 - 3:00                      | Simple workflow for an           |
-|                                  | ecological example               |
-+----------------------------------+----------------------------------+
-| 3:00 - free ending\              | WOYO                             |
-| or\                              |                                  |
-| next morning for earlier time    |                                  |
-| zones                            |                                  |
-+----------------------------------+----------------------------------+
-| **DAY 3**                        | **Using continuous workflows     |
-|                                  | with real challenges**           |
-+----------------------------------+----------------------------------+
-| 8:30 - 9:00                      | Revisit previous WOYO and Day 2  |
-+----------------------------------+----------------------------------+
-| 9:00 - 9:30                      | Flexibility comes at a cost, But |
-|                                  | it's worth it!                   |
-+----------------------------------+----------------------------------+
-| 9:30 - 10:00                     | Forest landscape modelling -     |
-|                                  | parameterisation                 |
-+----------------------------------+----------------------------------+
-| 10:00 - 11:00                    | WOYO                             |
-+----------------------------------+----------------------------------+
-| 11:00 - 11:30                    | Forest landscape modelling -     |
-|                                  | replication, validation, model   |
-|                                  | selection                        |
-+----------------------------------+----------------------------------+
-| 11:30 - 12:30                    | WOYO                             |
-+----------------------------------+----------------------------------+
-| 12:30 - 1:30                     | LUNCH BREAK                      |
-+----------------------------------+----------------------------------+
-| 1:30 - 2:00                      | Forests and wildfire             |
-+----------------------------------+----------------------------------+
-| 2:00 - 3:00                      | WOYO                             |
-+----------------------------------+----------------------------------+
++---------------------------------+---------------------------------+
+| **DAY 1**                       | **SpaDES foundations**          |
++---------------------------------+---------------------------------+
+| 8:30 - 9:20                     | Introduction                    |
++---------------------------------+---------------------------------+
+|                                 | Workshop logistics              |
++---------------------------------+---------------------------------+
+|                                 | What is SpaDES and why use it?  |
++---------------------------------+---------------------------------+
+| 9:30 - 10:00                    | [Introduction to SpaDES         |
+|                                 | modules](htt                    |
+|                                 | ps://predictiveecology.org/trai |
+|                                 | ning/_book/NewModuleIntro.html) |
++---------------------------------+---------------------------------+
+| 10:00 - 11:00                   | WOYO                            |
++---------------------------------+---------------------------------+
+| 11:00 - 11:30                   | [Module files and               |
+|                                 | metadata](https://pre           |
+|                                 | dictiveecology.org/training/_bo |
+|                                 | ok/MetaDataAndModuleFiles.html) |
++---------------------------------+---------------------------------+
+|                                 | [Module                         |
+|                                 | inputs](h                       |
+|                                 | ttps://predictiveecology.org/tr |
+|                                 | aining/_book/ModuleInputs.html) |
++---------------------------------+---------------------------------+
+| 11:30 - 12:30                   | WOYO                            |
++---------------------------------+---------------------------------+
+| 12:30 - 1:30                    | LUNCH BREAK                     |
++---------------------------------+---------------------------------+
+| 1:30 - 2:00                     | [The                            |
+|                                 | `simLis                         |
+|                                 | t`](https://predictiveecology.o |
+|                                 | rg/training/_book/simList.html) |
++---------------------------------+---------------------------------+
+| 2:00 - 3:00                     | WOYO                            |
++---------------------------------+---------------------------------+
+| 3:00 - 3:30                     | [Modules &                      |
+|                                 | events](https                   |
+|                                 | ://predictiveecology.org/traini |
+|                                 | ng/_book/ModulesAndEvents.html) |
++---------------------------------+---------------------------------+
+|                                 | [Event                          |
+|                                 | scheduling]                     |
+|                                 | (https://predictiveecology.org/ |
+|                                 | training/_book/Scheduling.html) |
++---------------------------------+---------------------------------+
+| 3:30 - free ending\             | WOYO                            |
+| or\                             |                                 |
+| next morning for earlier time   |                                 |
+| zones                           |                                 |
++---------------------------------+---------------------------------+
+| **DAY 2**                       | **Continuous workflows with     |
+|                                 | simple examples**               |
++---------------------------------+---------------------------------+
+| 8:30 - 9:00                     | Revisit previous WOYO and Day 1 |
++---------------------------------+---------------------------------+
+| 9:00 - 9:30                     | [Continuous                     |
+|                                 | workflows](https://             |
+|                                 | predictiveecology.org/training/ |
+|                                 | _book/ContinuousWorkflows.html) |
+|                                 |                                 |
+|                                 | [Cachi                          |
+|                                 | ng](https://predictiveecology.o |
+|                                 | rg/training/_book/Caching.html) |
++---------------------------------+---------------------------------+
+| 9:30 - 10:30                    | WOYO                            |
++---------------------------------+---------------------------------+
+| 10:30 - 11:00                   | [`prepInputs()`]                |
+|                                 | (https://predictiveecology.org/ |
+|                                 | training/_book/prepInputs.html) |
++---------------------------------+---------------------------------+
+| 11:00 - 12:00                   | WOYO                            |
++---------------------------------+---------------------------------+
+| 12:00 - 1:00                    | LUNCH BREAK                     |
++---------------------------------+---------------------------------+
+| 1:00 - 1:30                     | [SpaDES workflows and projects  |
+|                                 | with                            |
+|                                 | `setupProject`](h               |
+|                                 | ttps://predictiveecology.org/tr |
+|                                 | aining/_book/setupProject.html) |
+|                                 |                                 |
+|                                 | [A simple workflow for an       |
+|                                 | ecological                      |
+|                                 | example](http                   |
+|                                 | s://predictiveecology.org/train |
+|                                 | ing/_book/workflowSimple2.html) |
++---------------------------------+---------------------------------+
+| 1:30 - 2:30                     | WOYO                            |
++---------------------------------+---------------------------------+
+| 2:30 - 3:00                     | [De                             |
+|                                 | bugging](file:///C:/Users/cbarr |
+|                                 | os/GitHub/PredictiveEcology.org |
+|                                 | /training/_book/debugging.html) |
+|                                 |                                 |
+|                                 | [Best                           |
+|                                 | Practices](ht                   |
+|                                 | tps://predictiveecology.org/tra |
+|                                 | ining/_book/bestPractices.html) |
++---------------------------------+---------------------------------+
+| 3:00 - free ending\             | WOYO                            |
+| or\                             |                                 |
+| next morning for earlier time   |                                 |
+| zones                           |                                 |
++---------------------------------+---------------------------------+
+| **DAY 3**                       | **Using continuous workflows    |
+|                                 | with real challenges**          |
++---------------------------------+---------------------------------+
+| 8:30 - 9:00                     | Revisit previous WOYO and Day 2 |
++---------------------------------+---------------------------------+
+| 9:00 - 9:30                     | Flexibility comes at a cost,    |
+|                                 | But it's worth it!              |
++---------------------------------+---------------------------------+
+| 9:30 - 10:00                    | [Forest landscape modelling -   |
+|                                 | parameterisation,               |
+|                                 | simulation/prediction](https:   |
+|                                 | //predictiveecology.org/trainin |
+|                                 | g/_book/LandRDemo_coreVeg.html) |
++---------------------------------+---------------------------------+
+| 10:00 - 11:00                   | WOYO                            |
++---------------------------------+---------------------------------+
+| 11:00 - 11:30                   | [Forest landscape modelling -   |
+|                                 | turn plotting on, extend the    |
+|                                 | simulation,                     |
+|                                 | sc                              |
+|                                 | enarios](https://predictiveecol |
+|                                 | ogy.org/training/_book/LandRDem |
+|                                 | o_coreVeg.html#turn-plotting-on |
+|                                 | -after-setting-up-the-workflow) |
++---------------------------------+---------------------------------+
+| 11:30 - 12:30                   | WOYO                            |
++---------------------------------+---------------------------------+
+| 12:30 - 1:30                    | LUNCH BREAK                     |
++---------------------------------+---------------------------------+
+| 1:30 - 2:00                     | [Forests and                    |
+|                                 | wildfire](htt                   |
+|                                 | ps://predictiveecology.org/trai |
+|                                 | ning/_book/ForestsAndFire.html) |
++---------------------------------+---------------------------------+
+| 2:00 - 3:00                     | WOYO                            |
++---------------------------------+---------------------------------+
