--- a/training/ModuleInputs.qmd
+++ b/training/ModuleInputs.qmd
@@ -53,7 +53,10 @@ There are several ways to get objects into the `simList`:
 
     -   using the `inputs` argument (if it is from disk);
 
--   Developer creates defaults and specifies them in `.inputObjects`;
+    -   using the `params` argument;
+
+-   Developer creates defaults and specifies them in `defineParameter()` 
+    and `.inputObjects`;
 
 -   A different module creates them prior to the running of this module.
 
@@ -78,6 +81,38 @@ tf <- tempfile(fileext = ".rds")
 saveRDS(b, file = tf)
 sim <- SpaDES.core::simInit(inputs = data.frame(object = "b", file = tf))
 # now it is "sim$b"
+```
+
+Because parameters are usually module-specific, and need to be passed to with reference
+to a module. "Global" parameters are the exception to this rule:
+
+```{r duringSimInit2}
+c <- 1
+sim <- SpaDES.core::simInit(params = list(.globals = list(c = c)))
+SpaDES.core::params(sim)$.globals$c
+```
+
+To pass parameters to a module, we go back to ouT simple module and make a minor change:
+
+```{r}
+nm1 <- "My_linear_model"
+modulePath <- "~/SpaDES_book/NewModuleIntro/NewModule"
+SpaDES.core::newModule(name = nm1, path = modulePath, open = FALSE,
+                       events = list(
+                         init = {
+                           x <- rnorm(P(sim)$length)
+                           y <- x + rnorm(P(sim)$length)
+                           # fit a linear model
+                           model <- lm(y ~ x)
+                         }
+                       ))
+```
+
+We then include the following in the module metadata section
+
+```{r}
+defineParameter("length", "integer", 10L, 5L, 100L,
+                "Number of values to generate")
 ```
 
 See
@@ -153,12 +188,17 @@ exist](https://github.com/PredictiveEcology/Biomass_core/blob/d5c214b69f35e7a9f5
     -   It turns out that other modules may create this object "after"
         this module is run, and this test will fail.
 
-## Challenge yourself {#sec-moduleFilesAndMetadata-challengeYourself}
+## Try on your own
+
+-   Using the *My_linear_model* shown above, try running simulations 
+    where you pass different values to the  `length` parameter
 
 ## See also
 
+[`?SpaDES.core::expectsInputs`](https://rdrr.io/cran/SpaDES.core/man/expectsInputs.html)
+
 [`?SpaDES.core::suppliedElsewhere`](https://rdrr.io/cran/SpaDES.core/man/suppliedElsewhere.html)
 
-[`?SpaDES.core::expectsInputs`](https://rdrr.io/cran/SpaDES.core/man/expectsInputs.html)
+[`?SpaDES.core::defineParameter`](https://rdrr.io/cran/SpaDES.core/man/defineParameter.html)
 
 [`?SpaDES.core::simInit`](https://rdrr.io/cran/SpaDES.core/man/simInit.html)
